fix scrollbar track

--- a/public/global.css
+++ b/public/global.css
@@ -92,7 +92,6 @@ header {
 
 ::-webkit-scrollbar-track {
   background-color: var(--mdc-theme-background); /* transparent */
-  border-radius: 100vw;
   margin-block: 0.25rem;
 }
 
